compiler-tests/src/test/data/diagnostic/AnnotatedValueProp.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

import kotlin.jvm.JvmInline

@JvmInline
value class <!REDACTED_ERROR!>AnnotatedValueProp<!>(@Redacted val a: Int)
